Added inference_sdk to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 flask
-opencv-python
-ultralytics
+flask_cors
 fastapi
 uvicorn
+opencv-python
 ultralytics
 pillow
 python-multipart
 mailjet_rest
-flask
-flask_cors
 inference_sdk
-
+numpy
+pandas
+python-dotenv
